@@ -1,3 +1,8 @@
+2002-07-20  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/ae_component.py (__initConfig): error
+	in specifying default docroot.
+
 2002-07-19  Jacob Smullyan  <jsmullyan@wnyc.org>
 
 	* SkunkWeb/Services/templating/__init__.py (__initHooks),
